--- a/src/App.css
+++ b/src/App.css
@@ -123,3 +123,52 @@ footer {
     width: 200px;
     margin: 0 auto;
 }
+
+header nav {
+    display: flex;
+    gap:30px;
+    padding: 20px;
+    justify-content: center;
+    background-color: #b0bada;
+}
+
+header nav a {
+    color: #333;
+    text-decoration: none;
+    font-weight: bold;
+    font-size: 30px;
+    transition: color 0.3s;
+}
+
+header nav a:hover {
+    color: #d885a5;
+}
+
+#swapi-send {
+    padding: 10px 20px;
+    background-color: #007bff;
+    color: #fff;
+    border: none;
+    width: 300px;
+    margin: 0 auto;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 16px;
+    transition: background-color 0.3s ease;
+}
+
+#swapi-send:hover {
+    background-color: #0056b3;
+}
+
+pre {
+    margin: 0 auto;
+    padding: 20px;
+    width: 100%;
+    max-width: 800px;
+    overflow-x: auto;
+    white-space: pre-wrap;
+    word-break: break-word;
+    background-color: #f5f5f5;
+    border-radius: 6px;
+}
